--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,13 @@
 {
-    "python.pythonPath": "/Users/deepakrajsugumaran/opt/anaconda3/bin/python"
+    "python.pythonPath": "/Users/deepakrajsugumaran/opt/anaconda3/bin/python",
+    "python.testing.unittestArgs": [
+        "-v",
+        "-s",
+        "./Data Reader",
+        "-p",
+        "*_test.py"
+    ],
+    "python.testing.pytestEnabled": false,
+    "python.testing.nosetestsEnabled": false,
+    "python.testing.unittestEnabled": true
 }
