--- a/WebServer/requirements.txt
+++ b/WebServer/requirements.txt
@@ -1,14 +1,21 @@
 alembic==1.7.3
-atomicwrites==1.4.0
+async-generator==1.10
 attrs==21.2.0
 certifi==2021.5.30
+cffi==1.15.0
+charset-normalizer==2.0.7
 click==8.0.1
 colorama==0.4.4
+configparser==5.0.2
+crayons==0.4.0
+cryptography==35.0.0
 Flask==2.0.1
 Flask-JSGlue==0.3.1
 Flask-Migrate==3.1.0
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.1
+h11==0.12.0
+idna==3.3
 importlib-resources==5.2.2
 iniconfig==1.1.1
 itsdangerous==2.0.1
@@ -16,14 +23,27 @@ Jinja2==3.0.1
 Mako==1.1.5
 MarkupSafe==2.0.1
 numpy==1.21.2
+outcome==1.1.0
 packaging==21.0
 pluggy==1.0.0
 py==1.10.0
+pycparser==2.20
 pynmea2==1.18.0
+pyOpenSSL==21.0.0
 pyparsing==2.4.7
 pyserial==3.5
 pytest==6.2.5
+requests==2.26.0
+selenium==4.0.0
+six==1.16.0
+sniffio==1.2.0
+sortedcontainers==2.4.0
 SQLAlchemy==1.4.25
 toml==0.10.2
+trio==0.19.0
+trio-websocket==0.9.2
+urllib3==1.26.7
+webdriver-manager==3.5.1
 Werkzeug==2.0.1
+wsproto==1.0.0
 zipp==3.5.0
