--- a/Web Server/requirements.txt
+++ b/Web Server/requirements.txt
@@ -15,6 +15,7 @@ itsdangerous==2.0.1
 Jinja2==3.0.1
 Mako==1.1.5
 MarkupSafe==2.0.1
+numpy==1.21.2
 packaging==21.0
 pluggy==1.0.0
 py==1.10.0
@@ -22,4 +23,7 @@ pynmea2==1.18.0
 pyparsing==2.4.7
 pyserial==3.5
 pytest==6.2.5
+SQLAlchemy==1.4.25
+toml==0.10.2
+Werkzeug==2.0.1
 zipp==3.5.0
