--- a/Prerequisites/precision-farming-emitoolkit.yml
+++ b/Prerequisites/precision-farming-emitoolkit.yml
@@ -2,21 +2,21 @@ name: emitoolkit
 channels:
   - defaults
 dependencies:
-  - ca-certificates=2021.7.5=hecd8cb5_1
-  - certifi=2021.5.30=py38hecd8cb5_0
+  - ca-certificates=2021.7.5
+  - certifi=2021.5.30
   - libcxx=10.0.0=1
-  - libffi=3.3=hb1e8313_2
-  - ncurses=6.2=h0a44026_1
-  - openssl=1.1.1k=h9ed2024_0
-  - pip=21.0.1=py38hecd8cb5_0
-  - python=3.8.11=h88f2d9e_1
-  - readline=8.1=h9ed2024_0
-  - setuptools=52.0.0=py38hecd8cb5_0
-  - sqlite=3.36.0=hce871da_0
-  - tk=8.6.10=hb0a8c7a_0
-  - wheel=0.37.0=pyhd3eb1b0_0
-  - xz=5.2.5=h1de35cc_0
-  - zlib=1.2.11=h1de35cc_3
+  - libffi=3.3
+  - ncurses=6.2
+  - openssl
+  - pip=21.0.1
+  - python=3.8.11
+  - readline=8.1
+  - setuptools=52.0.0
+  - sqlite=3.36.0
+  - tk=8.6.10
+  - wheel=0.37.0
+  - xz=5.2.5
+  - zlib=1.2.11
   - pip:
     - alembic==1.7.3
     - altgraph==0.17.2
@@ -63,116 +63,3 @@ dependencies:
     - werkzeug==2.0.1
     - zipp==3.5.0
 prefix: /Users/asp/opt/anaconda3/envs/farm
-
-
-asn1crypto==0.24.0
-astroid==2.1.0
-asttokens==1.1.13
-automationhat==0.2.0
-beautifulsoup4==4.7.1
-blinker==1.4
-blinkt==0.1.2
-buttonshim==0.0.2
-Cap1xxx==0.1.3
-certifi==2018.8.24
-chardet==3.0.4
-click==8.0.3
-colorama==0.3.7
-colorclass==2.2.0
-colorzero==1.1
-cookies==2.2.1
-cryptography==2.6.1
-cupshelpers==1.0
-docutils==0.14
-drumhat==0.1.0
-entrypoints==0.3
-envirophat==1.0.0
-ExplorerHAT==0.4.2
-Flask==2.0.2
-Flask-JSGlue==0.3.1
-fourletterphat==0.1.0
-gpiozero==1.6.2
-html5lib==1.0.1
-idna==2.6
-importlib-metadata==4.8.1
-isort==4.3.4
-itsdangerous==2.0.1
-jedi==0.13.2
-Jinja2==3.0.2
-keyring==17.1.1
-keyrings.alt==3.1.1
-lazy-object-proxy==1.3.1
-logilab-common==1.4.2
-lxml==4.3.2
-MarkupSafe==2.0.1
-mccabe==0.6.1
-microdotphat==0.2.1
-mote==0.0.4
-motephat==0.0.3
-mypy==0.670
-mypy-extensions==0.4.1
-numpy==1.16.2
-oauthlib==2.1.0
-olefile==0.46
-pantilthat==0.0.7
-parso==0.3.1
-pep517==0.12.0
-pexpect==4.6.0
-pgzero==1.2
-phatbeat==0.1.1
-pianohat==0.1.0
-picamera==1.13
-piglow==1.2.5
-pigpio==1.78
-Pillow==5.4.1
-pip-check==2.6
-pip-tools==6.4.0
-psutil==5.5.1
-pycairo==1.16.2
-pycrypto==2.6.1
-pycups==1.9.73
-pygame==1.9.4.post1
-Pygments==2.3.1
-PyGObject==3.30.4
-pyinotify==0.9.6
-PyJWT==1.7.0
-pylint==2.2.2
-pynmea2==1.18.0
-pyOpenSSL==19.0.0
-pyserial==3.4
-pysmbc==1.0.15.6
-python-apt==1.8.4.3
-pyxdg==0.25
-rainbowhat==0.1.0
-reportlab==3.5.13
-requests==2.21.0
-requests-oauthlib==1.0.0
-responses==0.9.0
-roman==2.0.0
-RPi.GPIO==0.7.0
-RTIMULib==7.2.1
-scrollphat==0.0.7
-scrollphathd==1.2.1
-SecretStorage==2.3.1
-Send2Trash==1.5.0
-sense-hat==2.2.0
-simplejson==3.16.0
-six==1.12.0
-skywriter==0.0.7
-sn3218==1.2.7
-soupsieve==1.8
-spidev==3.5
-ssh-import-id==5.7
-terminaltables==3.1.0
-thonny==3.3.10
-tomli==1.2.1
-touchphat==0.0.1
-twython==3.7.0
-typed-ast==1.3.1
-typing-extensions==3.10.0.2
-unicornhathd==0.0.4
-urllib3==1.24.1
-webencodings==0.5.1
-Werkzeug==2.0.2
-wrapt==1.10.11
-zipp==3.6.0
